; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/msi/extr_appsearch.c_ACTION_AppSearchSigName.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/msi/extr_appsearch.c_ACTION_AppSearchSigName.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ERROR_SUCCESS = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i32*, i32, i32*, i32**)* @ACTION_AppSearchSigName to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @ACTION_AppSearchSigName(i32* %0, i32 %1, i32* %2, i32** %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32**, align 8
  %9 = alloca i64, align 8
  store i32* %0, i32** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32* %2, i32** %7, align 8
  store i32** %3, i32*** %8, align 8
  %10 = load i32**, i32*** %8, align 8
  store i32* null, i32** %10, align 8
  %11 = load i32*, i32** %5, align 8
  %12 = load i32*, i32** %7, align 8
  %13 = load i32, i32* %6, align 4
  %14 = call i64 @ACTION_AppSearchGetSignature(i32* %11, i32* %12, i32 %13)
  store i64 %14, i64* %9, align 8
  %15 = load i64, i64* %9, align 8
  %16 = load i64, i64* @ERROR_SUCCESS, align 8
  %17 = icmp eq i64 %15, %16
  br i1 %17, label %18, label %62

18:                                               ; preds = %4
  %19 = load i32*, i32** %5, align 8
  %20 = load i32**, i32*** %8, align 8
  %21 = load i32*, i32** %7, align 8
  %22 = call i64 @ACTION_AppSearchComponents(i32* %19, i32** %20, i32* %21)
  store i64 %22, i64* %9, align 8
  %23 = load i64, i64* %9, align 8
  %24 = load i64, i64* @ERROR_SUCCESS, align 8
  %25 = icmp eq i64 %23, %24
  br i1 %25, label %26, label %61

26:                                               ; preds = %18
  %27 = load i32**, i32*** %8, align 8
  %28 = load i32*, i32** %27, align 8
  %29 = icmp ne i32* %28, null
  br i1 %29, label %61, label %30

30:                                               ; preds = %26
  %31 = load i32*, i32** %5, align 8
  %32 = load i32**, i32*** %8, align 8
  %33 = load i32*, i32** %7, align 8
  %34 = call i64 @ACTION_AppSearchReg(i32* %31, i32** %32, i32* %33)
  store i64 %34, i64* %9, align 8
  %35 = load i64, i64* %9, align 8
  %36 = load i64, i64* @ERROR_SUCCESS, align 8
  %37 = icmp eq i64 %35, %36
  br i1 %37, label %38, label %60

38:                                               ; preds = %30
  %39 = load i32**, i32*** %8, align 8
  %40 = load i32*, i32** %39, align 8
  %41 = icmp ne i32* %40, null
  br i1 %41, label %60, label %42

42:                                               ; preds = %38
  %43 = load i32*, i32** %5, align 8
  %44 = load i32**, i32*** %8, align 8
  %45 = load i32*, i32** %7, align 8
  %46 = call i64 @ACTION_AppSearchIni(i32* %43, i32** %44, i32* %45)
  store i64 %46, i64* %9, align 8
  %47 = load i64, i64* %9, align 8
  %48 = load i64, i64* @ERROR_SUCCESS, align 8
  %49 = icmp eq i64 %47, %48
  br i1 %49, label %50, label %59

50:                                               ; preds = %42
  %51 = load i32**, i32*** %8, align 8
  %52 = load i32*, i32** %51, align 8
  %53 = icmp ne i32* %52, null
  br i1 %53, label %59, label %54

54:                                               ; preds = %50
  %55 = load i32*, i32** %5, align 8
  %56 = load i32**, i32*** %8, align 8
  %57 = load i32*, i32** %7, align 8
  %58 = call i64 @ACTION_AppSearchDr(i32* %55, i32** %56, i32* %57)
  store i64 %58, i64* %9, align 8
  br label %59

59:                                               ; preds = %54, %50, %42
  br label %60

60:                                               ; preds = %59, %38, %30
  br label %61

61:                                               ; preds = %60, %26, %18
  br label %62

62:                                               ; preds = %61, %4
  %63 = load i64, i64* %9, align 8
  ret i64 %63
}

declare dso_local i64 @ACTION_AppSearchGetSignature(i32*, i32*, i32) #1

declare dso_local i64 @ACTION_AppSearchComponents(i32*, i32**, i32*) #1

declare dso_local i64 @ACTION_AppSearchReg(i32*, i32**, i32*) #1

declare dso_local i64 @ACTION_AppSearchIni(i32*, i32**, i32*) #1

declare dso_local i64 @ACTION_AppSearchDr(i32*, i32**, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
